traefik/kubernetes-native-microservices/k8s-experiment/whoami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  type: LoadBalancer
  selector:
    app: whoami
  ports:
  - name: http
    port: 80
